src/features/home/shopping-item.module.css
.todo {
  display: flex;
  gap: 0.5rem;
  padding: 0.5rem 0;
  border-bottom: 1px solid var(--color-border);
}

.todoName {
  display: -webkit-box;
  align-self: center;
  margin: 0 auto 0 0;
  overflow: hidden;
  -webkit-box-orient: vertical;
  color: var(--color-text);
  font-size: inherit;
  font-weight: inherit;
  -webkit-line-clamp: 3;
  line-height: inherit;
  overflow-wrap: anywhere;
  text-align: left;
}

.updateButton,
.deleteButton {
  flex: 0 0 auto;
}

